# photo-functions

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
docs/: ARCHITECTURE.md  DEPLOYMENT.md
infra/aws/: README.md  deploy.sh  deploy_derivatives.sh  derivative-worker.yaml  storage.yaml
infra/aws/derivative_worker/: handler.py
scripts/: archive_2024.sh  archive_iphone_2024.command
src/: fix_dates.py  heic_to_jpg.py  mov_cleaner.py  photo_merger.py  photo_replacer.py
src/photo_manager/: __init__.py  asgi.py  catalog.py  cli.py  config.py  database.py  derivatives.py  iphone.py  metadata.py  storage.py  thumbnails.py
src/photo_manager/web/: app.py
src/photo_manager/web/static/: app.js  styles.css
src/photo_manager/web/templates/: index.html  login.html
tests/: conftest.py  test_catalog.py  test_database.py  test_derivatives.py  test_iphone.py  test_storage.py  test_thumbnails.py  test_web.py
