[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photo-manager"
version = "0.1.0"
description = "Catalog-first photo backup, duplicate review, and magazine selection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34",
    "fastapi>=0.115",
    "imagehash>=4.3.1",
    "pillow>=10.0",
    "pillow-heif>=0.15",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8.0", "ruff>=0.6"]
iphone = ["osxphotos==0.76.1"]

[project.scripts]
photo-manager = "photo_manager.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
photo_manager = ["web/static/*", "web/templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
